# miscservices_inputmethod

./: .clang-format  BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  inputmethod.gni  ohos.build
etc/init/: BUILD.gn  inputmethodservice.cfg  inputmethodservice.rc
etc/para/: BUILD.gn  inputmethod.para
etc/para/include/: para_handle.h
etc/para/src/: para_handle.cpp
frameworks/inputmethod_ability/: BUILD.gn
frameworks/inputmethod_ability/include/: event_target.h  i_input_method_agent.h  i_input_method_core.h  input_method_ability.h  input_method_agent_proxy.h  input_method_agent_stub.h  input_method_core_proxy.h  input_method_core_stub.h
frameworks/inputmethod_ability/src/: event_target.cpp  input_method_ability.cpp  input_method_agent_proxy.cpp  input_method_agent_stub.cpp  input_method_core_proxy.cpp  input_method_core_stub.cpp
frameworks/inputmethod_controller/: BUILD.gn
frameworks/inputmethod_controller/include/: i_input_client.h  i_input_data_channel.h  input_client_proxy.h  input_client_stub.h  input_data_channel_proxy.h  input_data_channel_stub.h  input_method_controller.h  input_method_system_ability_proxy.h  input_method_utils.h
frameworks/inputmethod_controller/src/: input_client_proxy.cpp  input_client_stub.cpp  input_data_channel_proxy.cpp  input_data_channel_stub.cpp  input_method_controller.cpp  input_method_system_ability_proxy.cpp  input_method_utils.cpp
interfaces/kits/js/declaration/: BUILD.gn
interfaces/kits/js/declaration/api/: @ohos.inputmethod.d.ts  @ohos.inputmethodability.d.ts  @ohos.inputmethodengine.d.ts
interfaces/kits/js/napi/: BUILD.gn  js_input_method_ability.cpp  js_input_method_engine.cpp
interfaces/kits/js/napi/include/: js_input_method.h  js_input_method_engine.h  js_input_method_engine_listener.h
interfaces/kits/js/napi/inputmethod/: BUILD.gn
interfaces/kits/js/napi/inputmethod/include/: js_input_method_controller.h  js_input_method_registry.h  js_input_method_setting.h  js_input_method_utils.h
interfaces/kits/js/napi/inputmethod/src/: input_method_module.cpp  js_input_method_controller.cpp  js_input_method_registry.cpp  js_input_method_setting.cpp  js_input_method_utils.cpp
interfaces/kits/js/napi/inputmethodengine/: BUILD.gn
interfaces/kits/js/napi/inputmethodengine/include/: js_editor_attribute.h  js_input_method_engine.h  js_input_method_engine_listener.h  js_input_method_engine_registry.h  js_input_method_engine_utils.h  js_keyboard_controller.h  js_keyboard_delegate.h  js_keyboard_delegate_listener.h  js_text_input_client.h
interfaces/kits/js/napi/inputmethodengine/src/: input_method_engine_module.cpp  js_editor_attribute.cpp  js_input_method_engine.cpp  js_input_method_engine_listener.cpp  js_input_method_engine_registry.cpp  js_input_method_engine_utils.cpp  js_keyboard_controller.cpp  js_keyboard_delegate.cpp  js_keyboard_delegate_listener.cpp  js_text_input_client.cpp
interfaces/kits/js/napi/src/: input_method_engine_module.cpp  input_method_module.cpp  js_input_method.cpp  js_input_method_engine.cpp  js_input_method_engine_listener.cpp
profile/: 3703.xml  BUILD.gn
services/: BUILD.gn
services/dfx/include/: inputmethod_dump.h  inputmethod_sysevent.h  inputmethod_trace.h
services/dfx/src/: inputmethod_dump.cpp  inputmethod_sysevent.cpp  inputmethod_trace.cpp
services/dialog/js/: BUILD.gn
services/dialog/js/i18n/: en-US.json  zh-CN.json
services/dialog/js/pages/index/: index.css  index.hml  index.js
services/include/: global.h  i_input_control_channel.h  i_input_method_proxy.h  i_input_method_system_ability.h  i_platform_api.h  i_platform_callback.h  im_common_event_manager.h  input_attribute.h  input_channel.h  input_control_channel_proxy.h  input_control_channel_stub.h  input_method_ability_connection_stub.h  input_method_property.h  input_method_setting.h  input_method_system_ability.h  input_method_system_ability_stub.h  keyboard_type.h  message.h  message_handler.h  peruser_session.h  peruser_setting.h  platform.h  platform_callback_stub.h  utils.h
services/src/: global.cpp  im_common_event_manager.cpp  input_attribute.cpp  input_channel.cpp  input_control_channel_proxy.cpp  input_control_channel_stub.cpp  input_method_ability_connection_stub.cpp  input_method_agent_proxy.cpp  input_method_property.cpp  input_method_setting.cpp  input_method_system_ability.cpp  input_method_system_ability_stub.cpp  keyboard_type.cpp  message.cpp  message_handler.cpp  peruser_session.cpp  peruser_setting.cpp  platform.cpp  platform_api_proxy.cpp  platform_callback_proxy.cpp  platform_callback_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/inputclientstub_fuzzer/: BUILD.gn  inputclientstub_fuzzer.cpp  inputclientstub_fuzzer.h
unitest/: BUILD.gn
unitest/src/: input_method_ability_test.cpp  input_method_controller_test.cpp  input_method_switch_test.cpp  test_ima.cpp  test_imc.cpp
