# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################

group("inputmethod_native_packages") {
  if (is_standard_system) {
    deps = [
      "etc/init:inputmethodservice.rc",
      "frameworks/inputmethod_ability:inputmethod_ability",
      "frameworks/inputmethod_controller:inputmethod_client",
      "interfaces/kits/js/declaration:inputmethod",
      "interfaces/kits/js/napi:inputmethodengine",
      "profile:miscservices_inputmethod_sa_profiles",
      "services:inputmethod_service",
    ]
  }
}
