# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_inner_api_path =
    "//foundation/ability/ability_runtime/interfaces/innerkits"

aafwk_services_path = "//foundation/ability/ability_runtime/services"

aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/kits"

inputmethod_path = "//base/miscservices/inputmethod"

kits_path = "${inputmethod_path}/interfaces/kits"

innerkits_path = "${inputmethod_path}/interfaces/innerkits"

adapter_path = "${inputmethod_path}/adapter"
