# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("inputmethod_services_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "dfx/include",
    "${inputmethod_path}/frameworks/inputmethod_ability/include",
    "${inputmethod_path}/frameworks/inputmethod_controller/include",
    "//base/notification/common_event_service/frameworks/core/include",
    "//base/notification/common_event_service/interfaces/innerkits/native/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("inputmethod_service") {
  sources = [
    "${inputmethod_path}/frameworks/inputmethod_controller/src/input_client_proxy.cpp",
    "dfx/src/inputmethod_dump.cpp",
    "dfx/src/inputmethod_sysevent.cpp",
    "dfx/src/inputmethod_trace.cpp",
    "src/global.cpp",
    "src/im_common_event_manager.cpp",
    "src/input_attribute.cpp",
    "src/input_channel.cpp",
    "src/input_control_channel_proxy.cpp",
    "src/input_control_channel_stub.cpp",
    "src/input_method_ability_connection_stub.cpp",
    "src/input_method_property.cpp",
    "src/input_method_setting.cpp",
    "src/input_method_system_ability.cpp",
    "src/input_method_system_ability_stub.cpp",
    "src/keyboard_type.cpp",
    "src/message.cpp",
    "src/message_handler.cpp",
    "src/peruser_session.cpp",
    "src/peruser_setting.cpp",
    "src/platform.cpp",
    "src/platform_callback_stub.cpp",
  ]

  configs = [ ":inputmethod_services_native_config" ]

  public_configs = [ ":inputmethod_services_native_config" ]

  deps = [
    "${ability_runtime_inner_api_path}/ability_manager:ability_manager",
    "${ability_runtime_inner_api_path}/app_manager:app_manager",
    "${ability_runtime_services_path}/abilitymgr:abilityms",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/inputmethod/imf/etc/para:inputmethod_para",
    "//base/inputmethod/imf/frameworks/inputmethod_ability:inputmethod_ability",
    "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
    "//foundation/arkui/napi/:ace_napi",
    "//foundation/arkui/napi/:ace_napi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//utils/native/base:utils",
  ]

  deps += [ "//base/inputmethod/imf/services/dialog/js:dialog_ime_js_files_etc" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitrace",
    "hiviewdfx_hilog_native:libhilog",
    "os_account:os_account_innerkits",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
