# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("inputmethod_client_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/services/dfx/include",
    "//utils/native/base/include",
    "${inputmethod_path}/services/include",
  ]
}

config("inputmethod_client_native_public_config") {
  visibility = []
  include_dirs = [
    "//base/inputmethod/imf/frameworks/inputmethod_controller/include",
    "//base/inputmethod/imf/frameworks/inputmethod_ability/include",
    "//base/inputmethod/imf/services/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "${inputmethod_path}/services/dfx/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("inputmethod_client") {
  sources = [
    "${inputmethod_path}/frameworks/inputmethod_ability/src/input_method_agent_proxy.cpp",
    "${inputmethod_path}/services/dfx/src/inputmethod_dump.cpp",
    "${inputmethod_path}/services/dfx/src/inputmethod_sysevent.cpp",
    "${inputmethod_path}/services/dfx/src/inputmethod_trace.cpp",
    "${inputmethod_path}/services/src/input_attribute.cpp",
    "${inputmethod_path}/services/src/input_method_property.cpp",
    "${inputmethod_path}/services/src/keyboard_type.cpp",
    "${inputmethod_path}/services/src/message.cpp",
    "${inputmethod_path}/services/src/message_handler.cpp",
    "src/input_client_proxy.cpp",
    "src/input_client_stub.cpp",
    "src/input_data_channel_proxy.cpp",
    "src/input_data_channel_stub.cpp",
    "src/input_method_controller.cpp",
    "src/input_method_system_ability_proxy.cpp",
    "src/input_method_utils.cpp",
  ]

  deps = [
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-common",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitrace",
    "hiviewdfx_hilog_native:libhilog",
  ]

  configs = [ ":inputmethod_client_native_config" ]

  public_configs = [ ":inputmethod_client_native_public_config" ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
