# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("InputClientStubFuzzTest") {

module_out_path = "miscservices/inputmethod"

fuzz_config_file = "//base/miscservices/inputmethod/test/fuzztest/inputclientstub_fuzzer"

include_dirs = ["//base/miscservices/inputmethod/frameworks/inputmethod_controller/include",
                "//base/miscservices/inputmethod/frameworks/inputmethod_controller/src",
                "//base/miscservices/inputmethod/frameworks/inputmethod_ability/include",
                "//base/miscservices/inputmethod/services/include",
                "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
                "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
                "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
                "//utils/native/base/include",]
 
cflags = ["-g","-O0","-Wno-unused-variable","-fno-omit-frame-pointer"]
  
sources = [ "inputclientstub_fuzzer.cpp"]

deps = [
                "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
                "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
                "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
                "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
                "//foundation/multimodalinput/input/frameworks/proxy:libmmi-common",
                "//utils/native/base:utils",
                "//base/miscservices/inputmethod/services:inputmethod_service",
                "//base/miscservices/inputmethod/frameworks/inputmethod_controller:inputmethod_client",
           ]

external_deps = [ "hiviewdfx_hilog_native:libhilog",]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":InputClientStubFuzzTest",
  ]
}
###############################################################################
